# ArcartXSuite

./: .gitignore  MODULAR-README.md  README.md  _s.ps1  build.gradle.kts  build.gradle.kts.bak2-20260627-111813  gradle.properties  package.json  settings.gradle.kts  test.enc
.devin/rules/: arcartx-skills.md  config-diagnostic-discipline.md
.github/workflows/: build-encrypted.yml  build-native.yml  build.yml  native-axbcheck.yml  native-selfcheck.yml
axs-api/: build.gradle.kts
axs-api/src/test/resources/: message-provider-defaults.yml
axs-core/: build.gradle.kts
axs-placeholder/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ClassFinalTask.kt  EmbedIntegrityTask.kt  EncryptModuleAxbTask.kt  ObfuscateJarTask.kt  ProtectYamlResourcesTask.kt  StringEncryptTask.kt
dist-scripts/: start-secure.bat  start-secure.sh
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/.temp/: @localSearchIndexroot.BKtq7xtq.js  VPLocalSearchBox.DNjTNA4A.js  app.js  appendix_changelog.md.js  architecture_bridges.md.js  architecture_index.md.js  architecture_packet-flow.md.js  architecture_protected-resources.md.js  architecture_security.md.js  guide_commands.md.js  guide_first-run.md.js  guide_index.md.js  guide_installation.md.js  guide_module-passwords.md.js  guide_placeholders.md.js  index.md.js  modules_announcer.md.js  modules_attacktarget.md.js  modules_bossbar.md.js  modules_chat.md.js  modules_combateffect.md.js  modules_conversation.md.js  modules_digisdisplay.md.js  modules_entitytracker.md.js  modules_eventpacket.md.js  modules_index.md.js  modules_killeffect.md.js  modules_loginview.md.js  modules_mail.md.js  modules_map.md.js  modules_onlinerewards.md.js  modules_packetcommand.md.js  modules_pickup.md.js  modules_prop.md.js  modules_questgps.md.js  modules_rgb.md.js  modules_subtitle.md.js  modules_tab.md.js  modules_title.md.js  modules_warehouse.md.js
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: HeroSubtagline.vue  HomeBackground.vue
docs/.vitepress/theme/styles/: custom.css
docs/api/: capability.md  i18n.md  index.md  module-context.md
docs/appendix/: changelog.md
docs/architecture/: bridges.md  config-autofix.md  index.md  modular.md  packet-flow.md  protected-resources.md  security.md  system-architecture.md
docs/guide/: commands.md  config-management.md  currencies.md  first-run.md  index.md  installation.md  module-passwords.md  placeholders.md  proxy-usage.md
docs/modules/: announcer.md  attacktarget.md  chat.md  combateffect.md  conversation.md  entitytracker.md  essentials.md  eventpacket.md  index.md  killeffect.md  loginview.md  mail.md  map.md  onlinerewards.md  packetcommand.md  pickup.md  prop.md  qqbot.md  questgps.md  rgb.md  subtitle.md  tab.md  title.md  warehouse.md
gradle/: encryption-tasks.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
libs/: chemdah.txt  db.txt  dbcompanion.txt  dbsql18.txt  dbsqlite.txt  free-list.txt  hostsql.txt  patched-list.txt  playerprofile.txt  quest.txt  questtable.txt  relational.txt  result.txt  type.txt
modules/afkreward/: build.gradle.kts
modules/announcer/: build.gradle.kts
modules/battlepass/: build.gradle.kts
modules/chat/: build.gradle.kts
modules/combateffect/: build.gradle.kts
modules/conversation/: build.gradle.kts
modules/entitytracker/: build.gradle.kts
modules/essentials/: build.gradle.kts
modules/eventpacket/: build.gradle.kts
modules/extrabackpack/: build.gradle.kts
modules/fishing/: build.gradle.kts
modules/loginview/: build.gradle.kts
modules/lottery/: build.gradle.kts
modules/mail/: build.gradle.kts
modules/map/: build.gradle.kts
modules/market/: build.gradle.kts
modules/menu/: build.gradle.kts
modules/onlinerewards/: build.gradle.kts
modules/pickup/: build.gradle.kts
modules/prop/: build.gradle.kts
modules/qqbot/: build.gradle.kts
modules/questgps/: build.gradle.kts
modules/regions/: build.gradle.kts
modules/rgb/: build.gradle.kts
modules/tab/: ROADMAP.md  build.gradle.kts
modules/title/: build.gradle.kts
modules/warehouse/: build.gradle.kts
native/: CMakeLists.txt
native/include/: axs_native.h
native/selfcheck/: AxbCheckHarness.java  SelfCheckHarness.java
native/selfcheck/xuanmo/arcartxsuite/security/: NativeBridge.java
native/src/: anti_debug_enhanced.cpp  axs_native.cpp  axs_native.cpp.bak2-20260627-085428  class_decrypt.cpp  class_decrypt.cpp.bak2-20260627-085422  env_check.cpp  hw_fingerprint.cpp  integrity_check.cpp  key_unwrap.cpp  module_decrypt.cpp  resource_decrypt.cpp  ticket_verify.cpp
proguard/: axs-core.pro  dictionary.txt  modules.pro
proxy/bungee/: build.gradle.kts
proxy/common/: build.gradle.kts
proxy/velocity/: build.gradle.kts
scripts/: RoundTripTest.java  chemdah_analyze.py  chemdah_companion_scan.py  chemdah_gate.py  chemdah_patch_mysql.py  chemdah_sql_detail.py  chemdah_verify.py  ci-upload.py  embed-keys.py  encrypt-jar.py  encrypt-jar.py.bak  encrypt-jar.py.bak2-20260627-085421  encrypt-native.py  generate-keys.py  inject-self-hash.py  make-tampered-copy.py  selftest-axb-sign.py  selftest-crypto.py  selftest-seed-wrap.py  sign-axb-test.py  test_inject_self_hash.py  verify-protection.py  wrap-axb.py
src/main/resources/: banner.txt  config.yml  license.yml  plugin.yml
tools/: zl.ps1
tools/_dec/: api.txt  dumpapi.ps1  dumpcols.ps1  dumpmap.ps1  dumprefs.ps1  gu.txt  gu2.txt  jvp_cols.txt  jvp_refs.txt  jvp_tableUser.txt  mappers.txt  patched_dbsql_javap.txt  patched_relational_javap.txt  qt.txt  questgps_mysql_summary.md  questtable_classes.txt  rel.txt  session_analysis_report.md  ui.txt  v18_dbsql_classes.txt  v2.txt
tools/_dec/bytecode/: q_1_1.txt  qd_1_1.txt  quest.txt  questData.txt  tableUser.txt  tableUserData.txt  tableUser_1_1.txt  tableUser_1_2.txt  tableUser_1_3.txt  tableUser_1_4.txt  tableVariables.txt  tud_1_1.txt  tud_1_2.txt  tv_1_1.txt
tools/_dec/lambdas/free/: summary.txt
tools/_dec/patched/: summary.txt
tools/_dec/sqlfull/: summary.txt
tools/_dec/tbl2/: summary.txt
(+2249 files in other folders)
